--- a/css/local.css
+++ b/css/local.css
@@ -14,6 +14,7 @@
   fill: green;
 }
 
-#vitalsYearSlider .slider-selection {
-	background: #BABABA;
+
+.slider-handle  {
+        background: blue;
 }
